# bominal-train

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  agentic-workflow-optimization-report.docx  dev-build.sh  docker-compose.yml  rust-toolchain.toml  tailwind.config.js
crates/bominal-app/: Cargo.toml  Trunk.toml  index.html
crates/bominal-app/assets/: interop.js  passkey-interop.js
crates/bominal-app/src/: api.rs  browser.rs  i18n.rs  lib.rs  shell_pages.rs  state.rs  types.rs  utils.rs
crates/bominal-app/src/api/: passkey.rs
crates/bominal-app/src/components/: bottom_nav.rs  bottom_sheet.rs  card_brand.rs  glass_panel.rs  icon.rs  mod.rs  selection_prompt.rs  sidebar.rs  skeleton.rs  sse_reload.rs  status_chip.rs  task_card.rs  ticket_card.rs
crates/bominal-app/src/pages/: home.rs  mod.rs  reservations.rs  reset_password.rs  search.rs  settings.rs  tasks.rs  verify_email.rs
crates/bominal-app/style/: app.css  main.css
crates/bominal-db/: Cargo.toml
crates/bominal-db/migrations/: 20260311000001_initial_schema.sql  20260311000002_replace_telegram_with_email.sql  20260312000001_add_passkey_and_expiry_fields.sql  20260312000002_passkey_challenge_state.sql  20260322000001_add_challenge_created_at_index.sql
crates/bominal-db/src/: card.rs  lib.rs  passkey.rs  provider.rs  session.rs  task.rs  user.rs
crates/bominal-domain/: Cargo.toml
crates/bominal-domain/src/: auth.rs  dto.rs  lib.rs  reservation.rs  station_search.rs  task.rs  task_event.rs  user.rs
crates/bominal-domain/src/crypto/: encryption.rs  mod.rs  password.rs
crates/bominal-domain/src/i18n/: en.rs  ja.rs  ko.rs  mod.rs  stations.rs
crates/bominal-email/: Cargo.toml
crates/bominal-email/src/: client.rs  lib.rs
crates/bominal-email/src/templates/: base.rs  mod.rs  newsletter.rs  reservation.rs  reset.rs  verify.rs
crates/bominal-frontend/: Cargo.toml
crates/bominal-frontend/src/: app.rs  browser.rs  hydrate.rs  i18n.rs  lib.rs  theme.rs  utils.rs
crates/bominal-frontend/src/api/: auth.rs  cards.rs  mod.rs  passkey.rs  providers.rs  reservations.rs  search.rs  tasks.rs
crates/bominal-frontend/src/components/: bottom_nav.rs  bottom_sheet.rs  card_brand.rs  date_picker.rs  glass_panel.rs  mod.rs  passenger_selector.rs  review_modal.rs  selection_prompt.rs  sidebar.rs  skeleton.rs  sortable_list.rs  sse_reload.rs  station_input.rs  status_chip.rs  task_card.rs  ticket_card.rs  time_slider.rs
crates/bominal-frontend/src/pages/: auth_page.rs  home_view.rs  mod.rs  reservations_view.rs  reset_password_page.rs  schedule_results.rs  search_panel.rs  settings_view.rs  tasks_view.rs  verify_email_page.rs
crates/bominal-frontend/style/: main.css
crates/bominal-frontend/ts/: interop.js  interop.ts
crates/bominal-provider/: Cargo.toml
crates/bominal-provider/src/: lib.rs  netfunnel.rs  retry.rs  types.rs
crates/bominal-provider/src/ktx/: client.rs  crypto.rs  dynapath.rs  mod.rs  reservation.rs  response.rs  stations.rs
crates/bominal-provider/src/srt/: client.rs  passenger.rs  reservation.rs  response.rs
crates/bominal-provider/tests/: live_provider_test.rs
crates/bominal-server/: Cargo.toml  build.rs
crates/bominal-server/src/: auth.rs  cards.rs  config.rs  error.rs  evervault.rs  extractors.rs  lib.rs  main.rs  middleware.rs  passkey.rs  providers.rs  rate_limit.rs  reservations.rs  routes.rs  runner.rs  search.rs  session_cleanup.rs  sse.rs  state.rs  tasks.rs  telemetry.rs
crates/bominal-server/tests/: auth_test.rs  cards_test.rs  passkey_test.rs  providers_test.rs  search_test.rs  tasks_test.rs
crates/bominal-server/tests/common/: mod.rs
crates/bominal-service/: Cargo.toml
crates/bominal-service/src/: auth.rs  cards.rs  error.rs  lib.rs  providers.rs  reservations.rs  search.rs  tasks.rs
crates/bominal-service/src/providers/: credentials.rs  mod.rs  netfunnel.rs  retry.rs  types.rs
crates/bominal-worker/: Cargo.toml
crates/bominal-worker/src/: events.rs  main.rs  runner.rs
docs/handoff/srtgo-capture/: .gitignore  HANDOFF_EXTERNAL_REWRITE.md  PROVIDER_CONTRACT.md  PROVIDER_FIELD_MAP.json  README.md  generate_provider_field_map.py  probe_auth_scope.py  pyproject.toml  run_cli.py  web_capture_runtime.py
docs/handoff/srtgo-capture/handoff/: RESOURCE_MANIFEST.json  RESOURCE_MANIFEST.md  STATLESS_ENDPOINT_SHORTLIST.md  UNRESOLVED_ENDPOINTS.md
docs/handoff/srtgo-capture/tests/: test_capture_runtime.py
runtime/: Cargo.toml  Dockerfile.api  Dockerfile.worker  README.md  compose.prod.yml  env.example
runtime/cloudrun/api/: README.md  bootstrap.sh  service.yaml
runtime/cloudrun/payment-crypto/: Dockerfile  README.md  go.mod  go.sum  main.go
runtime/crates/api/: Cargo.toml
runtime/crates/api/src/: i18n.rs  main.rs  web.rs
runtime/crates/api/tests/: admin_audit_log_test.rs  admin_observability_test.rs  admin_routes_test.rs  auth_page_test.rs  error_envelope_test.rs  (+3 more)
runtime/crates/shared/: Cargo.toml
runtime/crates/ui/: Cargo.toml
runtime/crates/ui_patterns/: Cargo.toml
runtime/crates/ui_primitives/: Cargo.toml
runtime/crates/worker/: Cargo.toml
runtime/data/train/: station_catalog.meta.json  station_catalog.v1.json
runtime/frontend/: package-lock.json  package.json  tailwind.config.js
runtime/frontend/assets/: README.md  generate-svgz.sh
runtime/frontend/scripts/: check-css-budget.mjs  optimize-css.mjs  sync-assets.mjs
runtime/frontend/styles/: tailwind.css
runtime/migrations/: 202603010001_bootstrap.sql  202603020001_runtime_jobs.sql  202603030001_provider_runtime_v2.sql  202603030002_local_auth.sql  202603030003_drop_supabase_auth_sync.sql  202603030004_admin_ops.sql  202603040001_train_reservation_projection_cutover.sql  202603040002_train_search_surface.sql  202603040003_train_station_catalog_state.sql  202603040004_train_search_passengers.sql  202603040005_runtime_job_events_job_id_id_idx.sql  202603050001_train_tasks_scheduler.sql  202603060001_train_station_favorites.sql
rust/crates/api/: Cargo.toml
rust/crates/shared/: Cargo.toml
(+1404 files in other folders)
