[workspace]
resolver = "2"
members = [
    "crates/bominal-server",
    "crates/bominal-provider",
    "crates/bominal-domain",
    "crates/bominal-db",
    "crates/bominal-email",
    "crates/bominal-frontend",
    "crates/bominal-service",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Async runtime — scoped to actual usage (no "full")
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }

# Web framework — scoped to actual usage (no "full")
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "fs", "cors", "compression-gzip", "compression-br", "limit", "set-header"] }

# Leptos
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = { version = "0.8", features = ["ssr"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "derive", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (provider)
reqwest = { version = "0.13", features = ["cookies", "json", "rustls", "webpki-roots", "form"], default-features = false }

# Crypto
argon2 = { version = "0.5", features = ["std"] }
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Random / distributions
rand = "0.9"
rand_distr = "0.5"

# Async streams
futures-util = "0.3"
async-stream = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
url = "2"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = "0.5"

# Testing
proptest = "1"

# Dev: small optimization for local crates, full optimization for dependencies
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release: maximum runtime performance for VM deployment
[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

# WASM release: optimize for size to reduce load times and bandwidth.
# Use: cargo build --profile wasm-release --target wasm32-unknown-unknown
# Post-process with: wasm-opt -Os --output output.wasm input.wasm
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
