[workspace]
members = [
    "crates/api",
    "crates/worker",
    "crates/shared",
    "crates/ui",
    "crates/ui_primitives",
    "crates/ui_patterns",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
async-stream = "0.3.6"
argon2 = "0.5.3"
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
to-kana = "0.6.0"
leptos = { version = "0.8.17", features = ["ssr"] }
leptos_axum = "0.8.8"
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "blocking", "cookies"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-full", "limit", "fs", "request-id", "timeout", "catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
webauthn-rs = { version = "0.5.4", features = ["preview-features", "danger-allow-state-serialisation"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
