[package]
name = "bominal-app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = ["leptos/ssr", "leptos_router/ssr", "dep:axum", "dep:leptos_axum", "dep:reqwest"]
hydrate = ["leptos/hydrate"]
demo = []

[dependencies]
bominal-domain = { path = "../bominal-domain", default-features = false }
bominal-ui = { workspace = true, features = ["leptos", "train", "auth"] }
leptos = { workspace = true, features = ["islands"] }
leptos_router.workspace = true
leptos_meta.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
chrono.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
url.workspace = true
uuid.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Navigator", "Window", "Document", "HtmlDocument"] }
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
