[package]
name = "bominal-db"
version.workspace = true
edition.workspace = true

[dependencies]
bominal-domain = { path = "../bominal-domain" }
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
