[package]
name = "bominal-domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
