[package]
name = "bominal-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
bominal-domain = { path = "../bominal-domain" }
bominal-service = { path = "../bominal-service" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
