[package]
name = "bominal-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
bominal-domain = { path = "../bominal-domain" }
bominal-service = { path = "../bominal-service" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "EventSource",
    "EventTarget",
    "Headers",
    "HtmlElement",
    "Location",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "Response",
    "Storage",
    "Window",
] }
