[package]
name = "bominal-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
ssr = ["leptos/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:axum", "dep:bominal-service"]
hydrate = ["leptos/hydrate"]

[dependencies]
bominal-domain = { path = "../bominal-domain", default-features = false }
bominal-service = { path = "../bominal-service", optional = true }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true, features = ["wasmbind"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "EventSource",
    "EventTarget",
    "Headers",
    "HtmlDocument",
    "HtmlElement",
    "Location",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "Response",
    "Storage",
    "Window",
] }
