[package]
name = "bominal-provider"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
aes.workspace = true
cbc.workspace = true
base64.workspace = true
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true
