[package]
name = "bominal-server"
version.workspace = true
edition.workspace = true

[lib]
name = "bominal_server"
path = "src/lib.rs"

[[bin]]
name = "bominal-server"
path = "src/main.rs"

[features]
default = []
ssr = ["dep:bominal-app", "dep:leptos", "dep:leptos_axum"]

[dependencies]
bominal-app = { path = "../bominal-app", default-features = false, features = ["ssr"], optional = true }
bominal-domain = { path = "../bominal-domain" }
bominal-db = { path = "../bominal-db" }
bominal-email = { path = "../bominal-email" }
bominal-service = { path = "../bominal-service" }
leptos = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
chrono.workspace = true
rand.workspace = true
rand_distr.workspace = true
futures-util.workspace = true
async-stream.workspace = true
url.workspace = true
webauthn-rs.workspace = true
webauthn-rs-proto.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sqlx.workspace = true
