[package]
name = "bominal-service"
version.workspace = true
edition.workspace = true

[dependencies]
bominal-db = { path = "../bominal-db" }
bominal-email = { path = "../bominal-email" }
bominal-domain = { path = "../bominal-domain" }
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
sqlx.workspace = true
# Provider HTTP client — wreq with TLS fingerprint emulation (replaces reqwest)
wreq.workspace = true
wreq-util.workspace = true
aes.workspace = true
cbc.workspace = true
base64.workspace = true
rand.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true
