[package]
name = "bominal-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bominal-worker"
path = "src/main.rs"

[dependencies]
bominal-domain = { path = "../bominal-domain" }
bominal-db = { path = "../bominal-db" }
bominal-email = { path = "../bominal-email" }
bominal-provider = { path = "../bominal-provider" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
chrono.workspace = true
rand.workspace = true
rand_distr.workspace = true
fred.workspace = true
