[project]
name = "srtgo-capture"
version = "0.1.0"
description = "Instrumented local srtgo CLI capture harness"
requires-python = ">=3.10"
dependencies = [
  "click",
  "curl_cffi",
  "requests",
  "inquirer>=3.4",
  "keyring",
  "PyCryptodome",
  "prompt_toolkit>=3",
  "python-telegram-bot",
  "termcolor",
]

