[package]
name = "bominal-api"
version.workspace = true
edition.workspace = true
default-run = "bominal-api"

[features]
default = []
curl-transport = ["bominal-shared/curl-transport"]

[dependencies]
async-stream.workspace = true
argon2.workspace = true
anyhow.workspace = true
axum.workspace = true
bominal-shared = { path = "../shared" }
bominal-ui = { path = "../ui" }
chrono.workspace = true
leptos.workspace = true
leptos_axum.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true

[lints]
workspace = true
