[package]
name = "bominal-shared"
version.workspace = true
edition.workspace = true

[features]
default = []
curl-transport = ["reqwest/native-tls"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
ring = "0.17.14"
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
